Am adaugat interfata grafica. Versiune temporara